# The-Apple-History

./: .gitignore  pyproject.toml
the_apple_story/: main.py
the_apple_story/static/: index.html
the_apple_story/static/pages/: Steve-Jobs.html  history.html  product.html
